# pathogena-analysis-tools

./: LICENSE  README.md  parse.ipynb  setup.cfg
data/: sap4nc.mapping.csv
data/effects/: site.04.subj.00042.lab.631456.iso.1.effects.csv  site.ENA.subj.SAMEA1016038.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1016056.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1019194.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA104172452.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA104172487.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA104394448.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA104394685.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA104394703.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1403579.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1403592.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1403709.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1403990.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1469528.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1707144.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA1707338.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA2533489.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA2533633.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA2533756.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA2533871.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA2533964.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA2534582.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA2534732.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA2534826.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA961579.lab.1.iso.1.effects.csv  site.ENA.subj.SAMEA961598.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN01908776.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN01908825.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN01908899.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647114.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647207.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647295.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647354.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647375.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647408.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647551.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647630.lab.1.iso.1.effects.csv  site.ENA.subj.SAMN03647781.lab.1.iso.1.effects.csv  (+31 more)
tables/: .gitignore  sandbox.ipynb
(+268 files in other folders)
